--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build --force"
+    "type-check": "vue-tsc --build --force",
+    "cy-open": "cypress open"
   },
   "dependencies": {
     "@mdi/font": "7.4.47",
@@ -31,6 +32,7 @@
     "vue-tsc": "^2.2.8",
     "pinia": "^3.0.1",
     "vue-router": "^4.5.0",
-    "prettier": "^3.5.3"
+    "prettier": "^3.5.3",
+    "cypress": "^14.3.2"
   }
 }
