--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "path": "./tsconfig.app.json"
     }
   ],
+  // copilot helped me with that config setup to make cypress run first time
   "compilerOptions": {
     "module": "NodeNext",
     "target": "ESNext",
