--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "pinia": "^3.0.1",
     "vue-router": "^4.5.0",
     "prettier": "^3.5.3",
-    "cypress": "^14.3.2"
+    "cypress": "^14.3.2",
+    "chance": "^1.1.12"
   }
 }
