--- a/package.json
+++ b/package.json
@@ -19,21 +19,23 @@
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.9.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
+    "chance": "^1.1.12",
+    "cypress": "^14.3.2",
+    "lodash-es": "^4.17.21",
     "npm-run-all2": "^7.0.2",
+    "pinia": "^3.0.2",
+    "prettier": "^3.5.3",
     "sass-embedded": "^1.86.3",
     "typescript": "~5.8.2",
     "unplugin-fonts": "^1.3.1",
     "unplugin-vue-components": "^28.4.1",
     "vite": "^6.2.2",
     "vite-plugin-vuetify": "^2.1.1",
-    "vue-tsc": "^2.2.8",
-    "pinia": "^3.0.2",
     "vue-router": "^4.5.0",
-    "prettier": "^3.5.3",
-    "cypress": "^14.3.2",
-    "chance": "^1.1.12"
+    "vue-tsc": "^2.2.8"
   }
 }
